# sdlm-leetcode

./: LICENSE  README.md  pyproject.toml  setup.py
examples/: full_pipeline_experiment.py  kl_divergence_experiment.py  kldiv_exp_full.py  leetcode_example.py  llama_1b_wandb_sweep.py  llama_3_1B.py  multi_model_kldiv_experiment.py  single_experiment.py  smolLM_135M.py  stgs_examples.py  train_capital_city.py  train_leetcode.py  visualize_kldiv.py
examples/kl_experiment_20250919_155510/: all_results.pt  result_fluency_T0.3.pt  result_fluency_T0.6.pt  result_fluency_T0.8.pt  result_fluency_T1.0.pt  result_random_T0.3.pt  result_random_T0.6.pt  result_random_T0.8.pt  result_random_T1.0.pt
sdlm/: __init__.py  stgs.py  stgs_diff_model.py  stgs_diff_string.py
sdlm/core/: __init__.py  differentiable_lm.py  patching.py  tensor_string.py
sdlm/leetcode/: __init__.py  dataset.py  losses.py  momentum.py  prompts_sdlm.py  utils.py
sdlm/leetcode/evaluators/: __init__.py  leetcode_eval.py
sdlm/textgrad/: __init__.py  losses.py  model.py  optimizer.py  variables.py
sdlm/utils/: factory_functions.py
tests/: README.md  __init__.py  conftest.py  differentiable_lm_test.py  patching_test.py  tensor_string_tests.py  test_sdlm_leetcode_opt.py  test_stgs.py  test_stgs_diff_model.py  test_stgs_diff_string.py
