[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdlm"
version = "0.1.0"
description = "Straight-Through Gumbel-Softmax Differentiable Language Modelling"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Near32"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=1.9.0",
    "transformers>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "mypy>=0.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sdlm", "sdlm.*"]

[project.urls]
"Homepage" = "https://github.com/Near32/sdlm"
"Bug Tracker" = "https://github.com/Near32/sdlm/issues"
